# camera-delay-sim

./: Cargo.toml  README.md  index.html  index.js
src/: lib.rs  main.rs
src/app/: gui.rs  mod.rs  settings.rs
src/app/visualizations/: mod.rs  sim_material.rs
src/app/visualizations/shaders/: sim_ball.frag  sim_common.frag  sim_graph.frag  sim_laser.frag  sim_ledstrip.frag  sim_spinner.frag
web/: .gitignore  README.md  build.sh  build_and_deploy.sh  index.html  webpack.config.js
